[tool.poetry]
name = "doCloudStuff"
version = "0.1.3"
description = ""
authors = ["Stephen Bawks <stephen@bawks.com>"]
repository="https://github.com/stephenbawks/docloudstuff"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^3.9"
pulumi-aws-native = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.15.0"
mypy = "^0.971"
pulumi = "^3.38.0"
pulumi-aws = "^5.12.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = "./tests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
